# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./lessons";
 export * from "./chat";
 export * from "./speaking";
 export * from "./gamification";
+export * from "./products";
